app/styles/style.css
/* ... */
.features-list.big li:before
{
	clear: both;
	float: none;
	display: block;
	width: 60px;
	font-size: 60px;
	margin-left: auto;
	margin-right: auto;
	padding: 39px;
}
.features-list li h4
{
	padding-bottom: 5px;
}
.features-list li p
{
	font-family: 'Raleway';
	font-size: 14px;
	line-height: 24px;
	padding: 0;
	margin-top: 19px;
	margin-left: 118px;
}
.features-list.big li h4
{
	margin-top: 35px;
}
.features-list.big li h4:after
{
	margin-top: 20px;
	margin-left: auto;
	margin-right: auto;
}
.features-list.big li p
{
	width: 80%;
	margin-left: auto;
	margin-right: auto;
}
.features-list.big .ornament
{
	position: relative;
	width: 1px;
	height: 20px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 13px;
	background: #E2E6E7;
}
.features-list.big .ornament:after
{
	position: absolute;
	content: "";
	border: 1px solid #E2E6E7;
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	width: 11px;
	height: 11px;
	left: -6px;
	bottom: -13px;
}
.page-404 .features-list.big li p
{
	font-size: 16px;
    line-height: 26px;
    margin-top: 34px;
}
/* --- testimonials --- */
.testimonials-container
{
	position: relative;
}
.testimonials-container .caroufredsel_wrapper_testimonials
{
	width: 1050px !important;
	left: 60px !important;
}
.testimonials-list li
{
	float: left;
	width: 1050px;
	text-align: center;
}
.testimonials-list li:before
{
	display: block;
	width: 48px;
	font-size: 48px;
	margin-left: auto;
	margin-right: auto;
	color: #FFF;
	border: 1px solid #E2E6E7;
	padding: 19px;
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
}
.testimonials-list .ornament
{
	position: relative;
	width: 1px;
	height: 20px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 13px;
	background: #E2E6E7;
}
.testimonials-list .ornament:after
{
	position: absolute;
	content: "";
	border: 1px solid #E2E6E7;
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	width: 11px;
	height: 11px;
	left: -6px;
	bottom: -13px;
}
.testimonials-list p
{
	font-family: 'Raleway';
	font-weight: 300;
	font-size: 21px;
	color: #FFFFFF;
	line-height: 36px;
	padding: 29px 50px 0;
}
.testimonials-list p:after
{
	display: block;
	content: "";
	background: #7770FF;
	width: 40px;
	height: 2px;
	margin-top: 30px;
	margin-bottom: 34px;
	margin-left: auto;
	margin-right: auto;
}
.testimonials-list  .author
{
	font-family: 'Raleway';
	font-weight: 500;
	font-size: 13px;
	color: #FFF;
	line-height: 20px;
}
.testimonials-list  .author-details
{
	margin-top: 7px;
	font-family: 'Raleway';
	font-weight: 500;
	font-size: 11px;
	color: #FFF;
	line-height: 16px;
	letter-spacing: 1px;
}
/* --- our clients --- */
.our-clients-list-container
{
	overflow: hidden;
	text-align: center;
}
.our-clients-list li
{
	float: left;
	margin-right: 30px;
}
.our-clients-list li img
{
	width: 100%;
}
.our-clients-pagination
{
	display: inline;
}
.our-clients-pagination a
{
	display: inline-block;
	width: 1px;
	height: 1px;
	background: #E2E6E7;
	border: 5px solid #E2E6E7;
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	margin-left: 10px;
	margin-top: 48px;
}
.our-clients-pagination a:first-child
{
	margin-left: 0;
}
.our-clients-pagination a.selected,
.our-clients-pagination a:hover
{
	border-color: #7770FF;
	background: #7770FF;
}
.our-clients-pagination span
{
	display: none;
}
/* --- contact details --- */
.contact-details-list li:before
{
	display: block;
	float: left;
	width: 48px;
	height: 48px;
	font-size: 48px;
	color: #7770FF;
	background: #FFF;
	border: 1px solid #FFF;
	padding: 19px;
	margin-right: 30px;
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
}
.contact-details-list li p
{
	font-family: 'Raleway';
	font-size: 16px;
	line-height: 26px;
	color: #FFF;
}
.contact-details-list li p a
{
	color: #FFF;
}
/* --- slider control --- */
.slider-control
{
	position: absolute;
	width: 26px;
	height: 26px;
	color: #FFF;
	border: 1px solid #E2E6E7;
	padding: 16px;
	top: 43%;
	font-size: 24px;
	z-index: 1;
	border-radius: 50%;
	-moz-border-radius: 50%;
	-webkit-border-radius: 50%;
	transition: all 0.3s ease 0s;
	-webkit-transition: all 0.3s ease 0s;
	-moz-transition: all 0.3s ease 0s;
}
.slider-control.right
{
	right: 0;
	-moz-transform: scaleX(-1);
    -webkit-transform: scaleX(-1);
    -o-transform: scaleX(-1);
    transform: scaleX(-1);
    -ms-filter: fliph;
    filter: fliph;
}
.slider-control:hover
{
	background: #7770FF;
	border-color: #7770FF;
}
/* --- parallax --- */
.parallax-1
{
	background-image: url('../images/samples/1920x1200/image_02.jpg');
}
.parallax-2
{
	background-image: url('../images/samples/1920x1200/image_02.jpg');
}
.parallax,
.parallax h2,
.parallax h4,
.parallax p,
.parallax .features-list li::before
{
	color: #FFF;
}
.parallax.cover
{
	background-size: cover;
}
/* --- counters --- */
span.number,
span.odometer.number
{
	margin-top: 10px;
	font-family: 'Raleway';
	font-weight: 100;
	font-size: 80px;
	color: #FFF;
	visibility: visible;
}
span.number:after,
span.odometer.number:after
{
	display: block;
	content: "";
	background: #7770FF;
	width: 40px;
	height: 2px;
	margin: 20px auto 0;
}
/* --- blog --- */
.blog>li
{
	clear: both;
	float: left;
	margin-top: 70px;
}
.blog>li:first-child,
.blog.small>li:first-child
{
	margin-top: 0;
}
.blog .post-image,
.blog .post-content,
.blog .post-details,
.blog .post-content-details li
{
	float: left;
}
.blog .post-details
{
	width: 90px;
	margin-right: 30px;
	font-family: 'Raleway';
	font-weight: 500;
	font-size: 13px;
	color: #999;
	line-height: 20px;
}
.blog .post-details a
{
	color: #999;
}
.blog .post-content
{
	width: 750px;
}
.blog .post-content .re-preloader
{
	height: 300px;
}
.blog .post-content .row
{
	width: auto;
}
.blog.small .post-content
{
	width: 160px;
}
.blog .post-details li
{
	border-top: 1px solid #E2E6E7;
	border-right: 1px solid #E2E6E7;
	text-align: center;
	padding: 10px 0;
}
.blog .post-details li:first-child
{
	border-top: none;
}
/* ... */

